--- a/example/src/App.css
+++ b/example/src/App.css
@@ -4,7 +4,8 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 512px;
+  width: 512px;
 }
 
 .App-header {
